@@ -260,7 +260,7 @@ MONGO_DB_PORT=int(env("MONGO_DB_PORT"))
 MONGO_USERNAME=env("MONGO_USERNAME")
 MONGO_PASSWORD=env("MONGO_PASSWORD")
 MONGO_DATABASE=env("MONGO_DATABASE")
-APP_LOGO="/static/assets/images/logo.jpg"
+APP_LOGO="/static/assets/images/logo.svg"
 PASSWORD_HASHERS = [
     'clarin_backend.clarin_hasher.ClarinBCryptSHA256PasswordHasher',
     'django.contrib.auth.hashers.BCryptSHA256PasswordHasher',
